istio/loki-virtualservice.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: loki
  namespace: istio-system
spec:
  hosts:
  - "*"
  gateways:
  - walklib-gateway
  http:
  - match:
    - uri:
        prefix: /loki/
    rewrite:
      uri: /
    route:
    - destination:
        host: loki.istio-system.svc.cluster.local
        port:
          number: 3100
---
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: loki
  namespace: istio-system
spec:
  host: loki.istio-system.svc.cluster.local
  trafficPolicy:
    connectionPool:
      tcp:
        maxConnections: 10
      http:
        http1MaxPendingRequests: 10
        http2MaxRequests: 10
